Animations and Keyboard Controls added

--- a/SDLGameEngine/SDLGameEngine.vcxproj.filters
+++ b/SDLGameEngine/SDLGameEngine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="AssetManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Animation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -60,6 +63,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SpriteComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Animation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="KeyboardInputComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
