- Animated flame to test GUI fixed position - G_DEBUG bool to enable debugging options - FPS Counter for debugging - Collision detection implimented - Hitboxes shown if G_DEBUG true

--- a/SDLGameEngine/SDLGameEngine.vcxproj.filters
+++ b/SDLGameEngine/SDLGameEngine.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Collision.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -78,6 +81,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TileComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ColliderComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
