--- a/SDLGameEngine/SDLGameEngine.vcxproj
+++ b/SDLGameEngine/SDLGameEngine.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
+    <ClCompile Include="FontManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -160,11 +161,13 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="FontManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="KeyboardInputComponent.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="SpriteComponent.h" />
+    <ClInclude Include="TextComponent.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="TileComponent.h" />
     <ClInclude Include="TransformComponent.h" />
