Fixing potential crashes with std::map accessing

--- a/SDLGameEngine/SDLGameEngine.vcxproj.filters
+++ b/SDLGameEngine/SDLGameEngine.vcxproj.filters
@@ -111,4 +111,9 @@
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\scripts\Level1.lua">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
