--- a/SDLGameEngine/SDLGameEngine.vcxproj
+++ b/SDLGameEngine/SDLGameEngine.vcxproj
@@ -173,6 +173,9 @@
     <ClInclude Include="TileComponent.h" />
     <ClInclude Include="TransformComponent.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\scripts\Level1.lua" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
